Use aspect-ratio to homepage image to prevent layout shift

--- a/src/_includes/styles.css
+++ b/src/_includes/styles.css
@@ -1,144 +1,146 @@
 /* Reset */
 * {
-	margin: 0;
-	padding: 0;
-	color: inherit;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: inherit;
+  box-sizing: border-box;
 }
 
 ul {
-	list-style: none;
+  list-style: none;
 }
 
 img {
-	display: block;
-	max-width: 100%;
+  display: block;
+  max-width: 100%;
 }
 
 /* Variables */
 :root {
-	--color-light: #eeeeee;
-	--color-lightest: #ffffff;
-	--color-dark: #000000;
-	--color-dark-transparent: rgba(0, 0, 0, 0.25);
-	--color-accent: #2b018e;
+  --color-light: #eeeeee;
+  --color-lightest: #ffffff;
+  --color-dark: #000000;
+  --color-dark-transparent: rgba(0, 0, 0, 0.25);
+  --color-accent: #2b018e;
 }
 
 /* Global */
 .site {
-	background-color: var(--color-light);
-	line-height: 1.5;
-	font-family: Georgia, 'Times New Roman', Times, serif;
-	font-size: 1.5rem;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
+  background-color: var(--color-light);
+  line-height: 1.5;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.5rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .site > * + * {
-	margin-top: 4rem;
+  margin-top: 4rem;
 }
 
 .site *::selection {
-	background: var(--color-dark);
-	color: var(--color-lightest);
+  background: var(--color-dark);
+  color: var(--color-lightest);
 }
 
 .site *:focus {
-	outline: 2px solid var(--color-accent);
-	outline-offset: 2px;
+  outline: 2px solid var(--color-accent);
+  outline-offset: 2px;
 }
 
 /* Typography */
 a:hover,
 a:focus {
-	color: var(--color-accent);
-	text-decoration: none;
+  color: var(--color-accent);
+  text-decoration: none;
 }
 
 /* Header */
 .header {
-	margin: 0 auto;
-	max-width: 800px;
-	padding: 2rem 1rem;
-	text-align: center;
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 2rem 1rem;
+  text-align: center;
 }
 
 .header-subtitle {
-	margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .header-title {
-	font-size: 3rem;
-	display: flex;
-	line-height: 1.2;
-	justify-content: center;
+  font-size: 3rem;
+  display: flex;
+  line-height: 1.2;
+  justify-content: center;
 }
 
 .header-back,
 .header-date {
-	font-size: 1rem;
+  font-size: 1rem;
 }
 
 /* Main */
 .site-main {
-	margin: 0 auto 2rem;
-	max-width: 50rem;
-	padding: 1rem;
+  margin: 0 auto 2rem;
+  max-width: 50rem;
+  padding: 1rem;
 }
 
 /* Articles list */
 .articles > * + * {
-	margin-top: 4rem;
+  margin-top: 4rem;
 }
 
 .article > * + * {
-	margin-top: 1.5rem;
+  margin-top: 1.5rem;
 }
 
 .article-title {
-	font-size: 2rem;
+  font-size: 2rem;
 }
 
 .article-date {
-	font-size: 1rem;
+  font-size: 1rem;
 }
 
 .article-image {
-	background-color: var(--color-lightest);
-	border-radius: 4px;
-	border: 4px solid var(--color-dark);
-	box-shadow: 5px 5px 5px -2px var(--color-dark-transparent);
+  aspect-ratio: 4 / 3;
+  background-color: var(--color-lightest);
+  border-radius: 4px;
+  border: 4px solid var(--color-dark);
+  box-shadow: 5px 5px 5px -2px var(--color-dark-transparent);
+  width: 100%;
 }
 
 .article-description {
-	margin-left: 2rem;
-	padding: 1rem 0;
+  margin-left: 2rem;
+  padding: 1rem 0;
 }
 
 /* Article page */
 .article-body > * + * {
-	margin-top: 1.5rem;
+  margin-top: 1.5rem;
 }
 
 .article-body img {
-	background-color: var(--color-lightest);
-	border-radius: 4px;
-	border: 4px solid var(--color-dark);
-	box-shadow: 5px 5px 5px -2px var(--color-dark-transparent);
+  background-color: var(--color-lightest);
+  border-radius: 4px;
+  border: 4px solid var(--color-dark);
+  box-shadow: 5px 5px 5px -2px var(--color-dark-transparent);
 }
 
 .article-body ul {
-	list-style: initial;
-	padding-left: 1.5rem;
+  list-style: initial;
+  padding-left: 1.5rem;
 }
 
 /* Footer */
 .footer {
-	border-top: 1px solid var(--color-dark);
-	font-size: 1.2rem;
-	margin: auto auto 0;
-	max-width: 800px;
-	padding: 2rem 1rem;
-	text-align: center;
+  border-top: 1px solid var(--color-dark);
+  font-size: 1.2rem;
+  margin: auto auto 0;
+  max-width: 800px;
+  padding: 2rem 1rem;
+  text-align: center;
 }
